--- a/.github/workflows/pre-commit-on-pr.yml
+++ b/.github/workflows/pre-commit-on-pr.yml
@@ -22,4 +22,5 @@ jobs:
           
       - name: Install dependencies
         run: |
-          uv run pre-commit
+          uv pip install pre-commit
+          pre-commit run --all-files
